<resources>
    <string name="app_name">毕业设计(论文)管理系统</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_subject">我的报题</string>
    <!--<string name="defense_rating">答辩打分</string>-->
    <string name="defense_rating">答辩打分</string>
    <string name="my_notice">我的通知</string>
    <string name="my_info">我的信息</string>
    <string name="login_text">登陆</string>
    <string name="myteam">我所在小组</string>


    <!--我的课题的详细界面-->
    <string name="title">题目名称</string>
    <string name="subTitle">副标题</string>
    <string name="projectType">题目类型</string>
    <string name="projectFidelity">题目性质</string>
    <string name="projectFrom">题目来源</string>
    <string name="school">我的学院</string>
    <string name="major">所在专业</string>
    <string name="reference">参考文献</string>
    <string name="content">工作内容</string>
    <string name="year">年份</string>
    <string name="basicSkill">基本技能</string>
    <string name="basicRequirement">基本要求</string>
    <string name="student_name">学生姓名</string>
    <string name="approveState">审核状态</string>

    <string name="replyGroup_name">名称 :</string>
    <string name="replyGroup_leader">组长 :</string>
    <string name="replyGroup_location">地点 :</string>
    <string name="replyGroup_major">专业 :</string>
    <string name="replyGroup_students">学生 :</string>
    <string name="replyGroup_time">时间 :</string>
    <string name="check_students">查看学生 :</string>
    <string name="members">答辩成员 :</string>

    <string name="commentByTutor">指导老师评审表</string>
    <string name="comment">打分</string>
    <string name="alter">修改</string>
    <string name="save">暂存</string>
    <string name="submit">提交</string>
    <string name="check">查看</string>

    <string name="get">收</string>
    <string name="forward">发</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="notice_title">通知标题</string>
    <string name="notice_description">通知内容</string>
    <string name="notice_date">发送时间</string>


    <!--测试-->
    <string name="city">城市:</string>
    <string name="wd">\n风向:</string>
    <string name="ws">\n风级:</string>
    <string name="time">\n发布时间:</string>
</resources>
